<resources>
    <string name="app_name">ReciclABC</string>
    <string name="title_collection_points">Pontos de coleta</string>
    <string name="title_recycling_guide">Como Reciclar</string>
    <string name="title_notifications">Notificações</string>
    <string name="recycling_guide_title">Title</string>
    <string name="recycling_guide_content">Content</string>
    <string name="menu_recycling_guide">Informações</string>
    <string name="regular_garbage">Lixo comum</string>
    <string name="recyclable_garbage">Lixo reciclável</string>
    <string name="types_of_recycling">Tipos de coleta</string>
    <string name="address">Endereço</string>
    <string name="time">Horário</string>
    <string name="weekdays">Dias da Semana</string>
    <string name="sunday_initial_letter">D</string>
    <string name="monday_initial_letter">S</string>
    <string name="tuesday_initial_letter">T</string>
    <string name="wednesday_initial_letter">Q</string>
    <string name="thursday_initial_letter">Q</string>
    <string name="friday_initial_letter">S</string>
    <string name="saturday_initial_letter">S</string>
    <string name="sunday_abbreviation">Dom</string>
    <string name="monday_abbreviation">Seg</string>
    <string name="tuesday_abbreviation">Ter</string>
    <string name="wednesday_abbreviation">Qua</string>
    <string name="thursday_abbreviation">Qui</string>
    <string name="friday_abbreviation">Sex</string>
    <string name="saturday_abbreviation">Sab</string>
    <string name="fragment_label_create_notification">Criar notificação</string>
    <string name="fragment_label_edit_notification">Editar notificação</string>
    <string name="notifications_add_address">Adicionar endereço</string>
    <string name="notifications_edit_address">Editar endereço</string>
    <string name="create_address_notification_fab_content_description">Adicionar notificação</string>
    <string name="create_address_notification_notification_label">Notificações</string>
    <string name="notifications_fab_content_description">Adicionar notificação por endereço</string>
    <string name="create_notification_button_text">Criar</string>
    <string name="edit_notification_button_text">Editar</string>
    <string name="create_notification_item_chip_text_recyclable">Reciclável</string>
    <string name="create_notification_item_chip_text_regular">Comum</string>
    <string name="create_notification_button_content_description">Menu da notificação</string>
    <string name="create_notification_time_text_example">16:30</string>
    <string name="create_notification_time_format">%02d:%02d</string>
    <string name="notifications_error_load_address">Não foi possível carregar o endereço.</string>
    <string name="notifications_required_address">Endereço obrigatório</string>
    <string name="notifications_missing_fields">Campos incompletos</string>
    <string name="notifications_error_save_address">Não foi possível salvar o endereço.</string>
    <string name="notifications_error_load_notification">Não foi possível carregar a notificação.</string>
    <string name="notifications_pick_hour">Selecione o horário da notificação</string>
    <string name="notifications_error_save_notification">Não foi possível salvar a notificação.</string>
    <string name="menu_edit_text">Editar</string>
    <string name="menu_delete_text">Deletar</string>
    <string name="format_weekdays_time">%s - %02d:%02d</string>
    <string name="material_paper">Papel</string>
    <string name="material_plastic">Plástico</string>
    <string name="material_metal">Metal</string>
    <string name="material_glass">Vidro</string>
    <string name="material_kitchen_oil">Óleo de cozinha</string>
    <string name="material_electronics">Eletrônicos</string>
    <string name="material_batteries">Pilhas e baterias</string>
    <string name="material_construction_waste">Entulho</string>
    <string name="filter_by_material">Filtre por material</string>
    <string name="clear_all">Limpar</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">OK</string>
    <string name="create_address_notification_button_text">Adicionar notificação</string>
    <string name="filter_button_description">Filtrar</string>
    <string name="my_location_button_description">Minha localização</string>
    <string name="broadcast_receiver_notification_title">Seu lembrete de retirar o lixo!</string>
    <string name="broadcast_receiver_notification_content">O horário da coleta de lixo %1$s está próximo de %2$s.</string>
    <string name="notification_channel_name">Notificação ReciclABC</string>
    <string name="notification_channel_description">Lembrete de coleta de lixo</string>
    <string name="add_notification_menu_add_notification">Adicionar notificação</string>
    <string name="search_button_description">Pesquisar endereço</string>
    <string name="error_location_access_required">"Você precisa permitir acesso à localização do dispositivo para usar esta funcionalidade."</string>
    <string name="error_location_unavailable">"Localização indisponível."</string>
    <string name="error_could_not_get_location">"Não foi possível obter a localização do dispositivo."</string>
    <string name="error_place_search">"Erro na busca por endereço."</string>
    <string name="cp_details_notification_button_description">Nova Notificação</string>
    <string name="cp_details_map_button_description">Abrir endereço</string>
    <string name="exit_without_saving_confirmation_text">Tem certeza que deseja sair sem salvar as alterações?</string>
    <string name="garbage_regular">comum</string>
    <string name="garbage_recyclable">reciclável</string>
    <string name="add_notification_for_place_button_description">Adicionar notificação para este local</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
</resources>
