<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/create_notification_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/create_notification_item_chip_text_recyclable"
            android:textSize="11sp"
            android:textStyle="bold"
            app:ensureMinTouchTargetSize="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/create_notification_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/create_notification_button_content_description"
            android:src="@drawable/ic_config"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/notification_menu" />

        <TextView
            android:id="@+id/create_notification_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_notification_time_text_example"
            android:textSize="36sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_notification_category" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/create_notification_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/create_notification_weekdays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Seg, Ter, Qua"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_notification_time" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>